fix missing sub menu letter spacing property

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -18,7 +18,6 @@
 		letter-spacing: var(--proteo-header_menu_letter_spacing, 2px);
 
 		ul {
-			letter-spacing: 1px;
 			padding: 45px 45px 30px;
 			box-shadow: 3px 0 15px rgba(0, 0, 0, 0.15);
 			float: left;
